<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/startingPoint"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:orientation="horizontal" />

        <LinearLayout
            android:id="@+id/logoImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startingPoint"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="10">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:contentDescription="@string/app_logo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/surksha_img" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImage"
            android:orientation="horizontal"
            android:weightSum="10">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7.6"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userName"
                        style="@style/NameInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/mobile">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userMobile"
                        style="@style/MobileInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userEmail"
                        style="@style/EmailInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/ref_code">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/refCode"
                        style="@style/CodeInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registerButton"
                    style="@style/MaterialButtonTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/signup" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginButton"
                    style="@style/MaterialButtonTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:backgroundTint="@color/secondaryColor"
                    android:text="@string/login"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2" />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>
