<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/startingPoint"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:orientation="horizontal" />

        <LinearLayout
            android:id="@+id/logoImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startingPoint"
            android:orientation="horizontal"
            android:weightSum="10">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:contentDescription="@string/img"
                    android:scaleType="centerCrop"
                    android:src="@drawable/techoesoftservicespvtltd" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImage"
            android:orientation="horizontal"
            android:weightSum="10">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7.6"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/DropDownLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:hint="@string/country_code">

                    <AutoCompleteTextView
                        android:id="@+id/userCountry"
                        style="@style/AutoCompleteTextStyle"
                        android:layout_width="match_parent"
                        android:background="@null"
                        android:layout_height="wrap_content"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userEmail"
                        style="@style/EmailInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/alternate_mobile">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userAltMobile"
                        style="@style/MobileInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/address">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userAddress"
                        style="@style/AddressInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/father_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fatherName"
                        style="@style/NameInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/dob">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dob"
                        style="@style/DOBInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10.5">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/DropDownLayoutTheme"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="5"
                        android:hint="@string/state">

                        <AutoCompleteTextView
                            android:id="@+id/userState"
                            style="@style/AutoCompleteTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:ignore="LabelFor" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/DropDownLayoutTheme"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="5"
                        android:hint="@string/city">

                        <AutoCompleteTextView
                            android:id="@+id/userCity"
                            style="@style/AutoCompleteTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:ignore="LabelFor" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10.5">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayoutTheme"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="5"
                        android:hint="@string/district">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userDistrict"
                            style="@style/NameInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayoutTheme"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="5"
                        android:hint="@string/pincode">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userPincode"
                            style="@style/MobileInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789"
                            android:maxEms="6"
                            android:maxLength="6" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:text="@string/save" />


            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2" />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>
