<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/startingPoint"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:orientation="horizontal" />

        <LinearLayout
            android:id="@+id/logoImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startingPoint"
            android:orientation="horizontal"
            android:weightSum="10">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:contentDescription="@string/img"
                    android:scaleType="centerCrop"
                    android:src="@drawable/technoecorp_logo" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImage"
            android:orientation="horizontal"
            android:weightSum="10">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7.6"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/account_holder">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/accountName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/secondaryColor"
                        android:theme="@style/NameInputEditText" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/account_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/accountNumber"
                        style="@style/AccountNumberInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/confirm_account_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmAccountNumber"
                        style="@style/AccountNumberInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/bank_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/bankName"
                        style="@style/NameInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/branch_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/branchName"
                        style="@style/AddressInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/ifsc">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ifscCode"
                        style="@style/CodeInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxEms="14"
                        android:maxLength="14" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/DropDownLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/account_type">

                    <AutoCompleteTextView
                        android:id="@+id/accountType"
                        style="@style/AutoCompleteTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rounded_dashed_box">

                    <ImageView
                        android:id="@+id/addProofImage"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_70sdp"
                        android:layout_margin="@dimen/_5sdp"
                        android:contentDescription="@string/img"
                        android:src="@drawable/image_placeholder" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/uploadAddressButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:text="@string/upload_address"
                        android:textSize="@dimen/_10ssp"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rounded_dashed_box">

                    <ImageView
                        android:id="@+id/idProofImage"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_70sdp"
                        android:layout_margin="@dimen/_5sdp"
                        android:contentDescription="@string/img"
                        android:src="@drawable/image_placeholder" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/uploadIdButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:text="@string/upload_id"
                        android:textSize="@dimen/_10ssp"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/verify_kyc" />


            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2" />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>

